--- a/packages/pseudom/package.json
+++ b/packages/pseudom/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pseudom",
   "displayName": "pseu·dom",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Documentless OM for markup",
-  "module": "index.js"
+  "main": "index.mjs"
 }
