--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
+  "$schema": "http://json.schemastore.org/prettierrc",
   "semi": true,
   "arrowParens": "avoid",
-  "printWidth": 120,
+  "printWidth": 100,
   "singleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": false,
