Move rich-editor and shadow-editor to examples

--- a/examples/rich-editor/package.json
+++ b/examples/rich-editor/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "displayName": "<rich-editor> Element",
   "description": "A rich editor custom element (based on dev.mozilla.org/web/guide/html/editable_content)",
-  "custom-element": "rich-editor.js",
-  "main": "rich-editor-element.html",
+  "element": "rich-editor.js",
+  "demo": "rich-editor.html",
   "license": "MIT",
   "exports": {
     "./": "rich-editor.js"
