--- a/examples/shadow-editor/package.json
+++ b/examples/shadow-editor/package.json
@@ -2,8 +2,8 @@
   "name": "@smotaal/shadow-editor-element",
   "author": "Saleh Abdel Motaal <saleh@grasppe.com>",
   "version": "0.0.0",
-  "custom-element": "shadow-editor.js",
-  "main": "shadow-editor-element.html",
+  "element": "shadow-editor.js",
+  "demo": "shadow-editor.html",
   "license": "MIT",
   "exports": {
     "./": "shadow-editor.js"
