config: Use @smotaal.io/prettier.config

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "carlo": "*"
   },
   "devDependencies": {
+    "@smotaal.io/prettier.config": "*",
     "@types/node": "*",
     "prettier": "*",
     "rollup": "*",
