--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,1 @@
-{
-  "$schema": "http://json.schemastore.org/prettierrc",
-  "semi": true,
-  "arrowParens": "avoid",
-  "printWidth": 100,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "bracketSpacing": false,
-  "jsxBracketSameLine": true
-}
+﻿"@smotaal.io/prettier.config"
