--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,7 @@
 specs/
 docs/
 meta/
+experiments/
 **/*.psd
 **/*.tgz
 **/*.visx
@@ -9,5 +10,7 @@ meta/
 **/.DS_Store
 .*/**
 **/tsconfig.json
+**/tsconfig.*.json
+**/jsconfig.json
 **/tsbuildinfo.json
 **/*.tsbuildinfo
