--- a/package.json
+++ b/package.json
@@ -6,33 +6,19 @@
   "author": "Saleh Abdel Motaal <saleh@grasppe.com>",
   "repository": "https://github.com/SMotaal/components.git",
   "license": "MIT",
-	"type": "module",
+  "type": "module",
   "exports": {},
   "scripts": {
     "serve": "npx -q http-server --cors -s",
     "chrome": "/Applications/Google\\ Chrome.app/Contents/MacOS/Google\\ Chrome",
     "compile": "rollup -c"
   },
-  "otherDependencies": {
-    "carlo": "*"
-  },
   "devDependencies": {
-    "@smotaal.io/prettier.config": "*",
+    "@smotaal.io/tools": "*",
     "@types/node": "*",
     "prettier": "*",
     "rollup": "*",
     "typescript": "*",
-    "http-server": "*",
-    "@smotaal/esm": "SMotaal/esm"
-  },
-  "workspaces": {
-    "packages": [
-      "code-editor",
-      "packages/fragma",
-      "packages/pseudom"
-    ],
-    "nohoist": [
-      "**/pseudom"
-    ]
+    "http-server": "*"
   }
 }
